# nrwurhjxjdfgc-

./: package-lock.json  package.json  pyproject.toml  start_ai_service.sh  tailwind.config.ts  theme.json
ai_services/: concept_extraction.py  main.py  relation_detection.py
client/src/: App.tsx  index.css
client/src/components/: Navigation.tsx  NoteInput.tsx  NoteMessage.tsx
client/src/pages/: Feed.tsx  Graph.tsx
data/: metadata.db
data/notes/: 1738842529256.md  1738842596372.md  1738842602644.md  1738842608843.md  1738842614351.md  1738842621892.md  1738842784261.md  1738842806157.md  1738842812957.md  1738842893678.md  1738842901245.md
server/: routes.ts  storage.ts
server/storage/: local.ts
shared/: schema.ts
